<resources>
    <string name="app_name">ServiceApp</string>


    <string name="login">Login!</string>
    <string name="register">Register!</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel!</string>
    <string name="currency"> $</string>
    <string name="create">Create!</string>
    <string name="email_user">Email User!</string>
    
    
    <string name="default_email_subject">About your ad: </string>
    <string name="default_email_body_1">Hi! I am interested in your ad</string>
    <string name="default_email_body_2">. Please reply to my email when you have the time to help me!</string>
    <string name="choose_email_client">Please choose an email client:</string>



    <!-- Hints -->

    <string name="login_name_hint">Email...</string>
    <string name="login_password_hint">Password...</string>
    <string name="title_hint">Title...</string>
    <string name="description_hint">Description...</string>
    <string name="price_hint">Price...</string>


    <!-- Register -->

    <string name="register_confirm_password_hint">Confirm password...</string>
    <string name="register_first_name_hint">First name...</string>
    <string name="register_last_name_hint">Last name...</string>
    <string name="password_missmatch">Password does not match, please try again!</string>
    <string name="first_name_empty">First name is empty!</string>
    <string name="last_name_empty">Last name is empty!</string>
    <string name="field_empty">All fields required to have input!</string>
    <string name="empty_and_password_missmatch">Password missmatch and all fields required!</string>


    <!-- Top nav -->

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Bottom nav -->

    <string name="ads">Recent ads</string>
    <string name="nearby_ads">Nearby ads</string>
    <string name="messages">Messages</string>
    <string name="your_ads">Your ads</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_ad">Create ad</string>


    <!-- Logs -->
    <string name="log_user_doc_exists">User document exists!</string>
    <string name="log_something_went_wrong">Something went wrong!</string>
    <string name="failed_with">Failed with: </string>
    <string name="document_not_exists">The document does not exists!</string>

</resources>
