<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"    >

    <include
        layout="@layout/toolbar_layout"/>

    <EditText
        android:id="@+id/addAdTitle"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:layout_below="@+id/toolBar"
        android:maxLength="20"
        />

    <EditText
        android:id="@+id/adAddPrice"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/addAdTitle"

        android:hint="@string/price_hint"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/adAddDescription"
        android:layout_width="215dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:hint="@string/description_hint"
        android:elevation="10dp"
        android:layout_below="@id/addAdTitle"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine|text"
        android:maxLines="12"
        android:maxLength="250"
        />



    <TextView
        android:id="@+id/adAddUsername"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:layout_below="@id/adAddDescription"
        android:ems="10"
        android:textStyle="italic"
        android:text="Calle Svensson"
        />

    <ImageView
        android:id="@+id/adAdImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/adAddPrice"
        android:layout_toEndOf="@id/adAddDescription"
        android:src="@drawable/construction"
        android:background="@drawable/rectangle"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/createAdButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/adAddDescription"
        android:layout_alignParentEnd="true"
        android:padding="0dp"

        android:layout_below="@id/adAdImage"

        android:text="@string/create"
        android:onClick="createAd"/>

    <Button
        android:id="@+id/cancelAdCreation"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/adAddDescription"
        android:layout_below="@id/createAdButton"
        android:layout_alignParentEnd="true"

        android:text="@string/cancel"
        android:onClick="cancelCreateAdd"
        />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white" />


</RelativeLayout>